[gd_scene load_steps=5 format=2]

[ext_resource path="res://world.gd" type="Script" id=1]
[ext_resource path="res://background.png" type="Texture" id=2]
[ext_resource path="res://major_city_neutral.png" type="Texture" id=3]
[ext_resource path="res://minor_city_neutral.png" type="Texture" id=4]

[node name="world" type="Node2D"]
script = ExtResource( 1 )

[node name="background_spr" type="Sprite" parent="."]
position = Vector2( -6.10352e-005, -0.149414 )
z_index = -1
z_as_relative = false
texture = ExtResource( 2 )
centered = false

[node name="mjr_btm_left" type="Sprite" parent="."]
position = Vector2( 120.874, 960.519 )
texture = ExtResource( 3 )

[node name="mjr_middle" type="Sprite" parent="."]
position = Vector2( 787.399, 479.18 )
texture = ExtResource( 3 )

[node name="mjr_top_right" type="Sprite" parent="."]
position = Vector2( 1500.14, 120.874 )
texture = ExtResource( 3 )

[node name="minor_top_left" type="Sprite" parent="."]
position = Vector2( 313.16, 155.256 )
texture = ExtResource( 4 )

[node name="minor_top_right" type="Sprite" parent="."]
position = Vector2( 1204.36, 156.763 )
texture = ExtResource( 4 )

[node name="minor_btm_left" type="Sprite" parent="."]
position = Vector2( 306.174, 658.708 )
texture = ExtResource( 4 )

[node name="minor_btm_right" type="Sprite" parent="."]
position = Vector2( 1220.95, 699.406 )
texture = ExtResource( 4 )
